--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,12 @@ body{
 
 .ingCon > ul{
     margin-left: 1.3rem;
-
 }
 
+.ingCon > ul > li::marker{
+    color: hsl(14, 45%, 36%);
+}
+ 
 .ingCon > ul > li{
     font-size: 13px;
 }
@@ -109,6 +112,10 @@ body{
 .insCon > ol{
     margin-left: 1.6rem;
 
+}
+
+.insCon > ol > li::marker{
+    color: hsl(14, 45%, 36%);
 }
 
 .insCon > ol > li > b{
